# jarvis

./: .env.template  .gitignore  README.MD  README.md  main.py  pyproject.toml  start_server.sh
api/: __init__.py
api/v1/: endpoints.py
core/: config.py  logging.py  prompts.py
db/: models.py  session.py  tools_dao.py
schema/: tools.py
services/: embedding_service.py  graph.py  llm_service.py  mcp.py  vector_service.py
services/mcp_servers/: get_weather.py
utils/: messages.py
