[tool.poetry]
name = "jarvis"
version = "0.1.0"
description = ""
authors = ["Pranav"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.115.11"
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.3"
pydantic-settings = "^2.8.1"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.9"
langchain-groq = "^0.3.1"
langchain-ibm = "^0.3.8"
langchain-chroma = "^0.2.2"
langgraph = "0.2.59"
langchain-mcp-adapters = "^0.0.5"
langchain-google-genai = "^2.1.2"
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
cryptography = "^42.0.5"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

